- fix spacings v2.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -578,6 +578,10 @@ ul {
 
 @media screen and (max-width: $mobile-view-width) {
 
+	.slick-dots{
+		bottom: -35px;
+	}
+
 	.section{
 		padding-bottom: $section-xs-padding;
 	}
